<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_habits"
        android:icon="@drawable/ic_habits"
        android:title="Habit"/>
    
    <item
        android:id="@+id/nav_mood"
        android:icon="@drawable/ic_mood"
        android:title="@string/nav_mood" />
    
    <item
        android:id="@+id/nav_hydration"
        android:icon="@drawable/ic_hydration"
        android:title="@string/nav_hydration" />
    
    <item
        android:id="@+id/nav_progress"
        android:icon="@drawable/ic_progress"
        android:title="Progress" />
    
    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/nav_settings" />
</menu>