<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:padding="16dp"
    tools:context=".ui.auth.RegisterActivity">

    <LinearLayout
        android:id="@+id/back_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/back_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/back_icon"
            android:textColor="@color/text_primary"
            android:textSize="33sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/back_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="2.5dp"
            android:text="@string/back"
            android:textColor="@color/text_primary"
            android:textSize="16sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/title_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/sign_up_title"
        android:textColor="@color/text_primary"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/back_layout" />


    <EditText
        android:id="@+id/edit_text_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:autofillHints=""
        android:background="@drawable/rounded_input_field"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_text" />

    <EditText
        android:id="@+id/edit_text_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:background="@drawable/rounded_input_field"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_text_name" />


    <LinearLayout
        android:id="@+id/gender_input_layout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_text_email">

        <AutoCompleteTextView
            android:id="@+id/edit_text_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_input_field"
            android:clickable="true"
            android:drawableRight="@drawable/ic_dropdown_arrow"
            android:entries="@array/gender_options"
            android:focusable="true"
            android:hint="@string/gender"
            android:inputType="none"
            android:padding="12dp" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/phone_input_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_input_field"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gender_input_layout2">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/flag"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/number"
            android:textColor="@color/text_primary"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edit_text_phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:autofillHints=""
            android:background="@null"
            android:digits="0123456789+ -()"
            android:hint="@string/mobile"
            android:inputType="phone"
            android:maxLength="9"
            tools:ignore="Autofill" />

    </LinearLayout>


    <RelativeLayout
        android:id="@+id/password_input_layout_reg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_input_field"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/phone_input_layout">

        <EditText
            android:id="@+id/edit_text_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:background="@null"
            android:hint="Enter Your Password"
            android:inputType="textPassword"
            android:paddingStart="12dp"
            android:paddingTop="12dp"
            android:paddingEnd="48dp"
            android:paddingBottom="12dp" />

        <ImageView
            android:id="@+id/password_toggle_reg"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="8dp"
            android:padding="4dp"
            android:src="@drawable/ic_visibility_off"
            tools:ignore="ContentDescription"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/confirm_password_input_layout_reg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/rounded_input_field"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_input_layout_reg">

        <EditText
            android:id="@+id/edit_text_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:background="@null"
            android:hint="Confirm Password"
            android:inputType="textPassword"
            android:paddingStart="12dp"
            android:paddingTop="12dp"
            android:paddingEnd="48dp"
            android:paddingBottom="12dp" />

        <ImageView
            android:id="@+id/confirm_password_toggle_reg"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="8dp"
            android:padding="4dp"
            android:src="@drawable/ic_visibility_off"
            tools:ignore="ContentDescription"/>
    </RelativeLayout>

    <TextView
        android:id="@+id/password_note"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="Must be at least 8 characters"
        android:textColor="@color/text_secondary"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/confirm_password_input_layout_reg" />

    <LinearLayout
        android:id="@+id/terms_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_note"
        tools:ignore="UseCompoundDrawables">

        <CheckBox
            android:id="@+id/checkbox_terms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:buttonTint="@color/checkbox_terms_tint"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/text_terms"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:text="@string/terms_privacy"
            android:textColor="@color/light_gray"
            android:textSize="15sp" />
    </LinearLayout>

    <Button
        android:id="@+id/button_sign_up"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="52dp"
        android:backgroundTint="@color/go_lanka_orange"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:cornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/terms_layout" />

    <LinearLayout
        android:id="@+id/or_divider_layout2"
        android:layout_width="429dp"
        android:layout_height="3dp"
        android:layout_marginTop="16dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_sign_up"
        app:layout_constraintVertical_bias="0.0"></LinearLayout>

    <TextView
        android:id="@+id/not_have_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/already_have_account"
        android:textColor="@color/text_secondary"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/text_sign_in"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/or_divider_layout2"
        app:layout_constraintVertical_bias="0.025" />

    <TextView
        android:id="@+id/text_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/sign_in_link"
        android:textColor="@color/go_lanka_orange"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/not_have_account"
        app:layout_constraintTop_toTopOf="@+id/not_have_account" />

</androidx.constraintlayout.widget.ConstraintLayout>
